[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/screen/ClothesMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/screen/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/screen/CharacterMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/screen/MiscMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/MainGUI.gd" type="Script" id=5]
[ext_resource path="res://ui/screen/CreditsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/screen/SlotMenu.tscn" type="PackedScene" id=7]

[node name="MainGUI" type="Control"]
margin_right = 420.0
margin_bottom = 270.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[node name="ClothesMenu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="CharacterMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MiscMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CreditsMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="SlotMenu" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="menu_button_pressed" from="MainMenu" to="." method="_on_MainMenu_menu_button_pressed"]
